Added emailing support

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           <form
             class="contact-form"
             method="POST"
-            action="https://formspree.io/afnan.attar47@gmail.com"
+            action="https://formspree.io/f/xpzkwzbj"
           >
             <div class="form-group">
               <input
