--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
               <i class="devicon-javascript-plain" title="JavaScript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-angularjs-plain" title="Angular"></i>
+              <i class="devicon-nodejs-plain" title="Node.js"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-bootstrap-plain" title="Bootstrap 4"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-typescript-plain" title="Typescript"></i>
+              <i class="devicon-mongodb-plain" title="MongoDb"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-cplusplus-plain" title="C++"></i>
@@ -185,7 +185,7 @@
               <i class="devicon-googlecloud-plain" title="GCP"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-visualstudio-plain" title="Visual Studio"></i>
+              <i class="devicon-express-original-wordmark" title="Express.js"></i>
             </li>
 
             <li class="list-inline-item">
