--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
             Hi, I am <span class="family-name">Afnan Attar</span>
           </h1>
           <p class="mobile-profession">
-            Front End Web Developer, ML enthusiast, Aspring Competitive Programmer
+            Front End Web Developer, ML enthusiast, Aspiring Competitive Programmer
           </p>
           <h4 class="mb-4">
-            Front End Web Developer, ML enthusiast, Aspring Competitive Programmer
+            Front End Web Developer, ML enthusiast, Aspiring Competitive Programmer
           </h4>
 
           <p class="mb-3">
